--- a/lookup/templates/about.html
+++ b/lookup/templates/about.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 
-<h1>About Me...</h1>
+<h1>About Me</h1>
+<p>On this website, you can get air quality data where you live by entering the zipcode. All information is from <a href="https://www.airnow.gov/">Airnow</a>.</p>
+
+<h1>Air Quality Index (AQI) & Health</h1>
+
+<p>Millions of people live in areas where air pollution can cause serious health problems. Local air quality can affect our daily lives. Like the weather, it can change from day to day. EPA developed the Air Quality Index, or AQI, to make information available about the health effects of the five most common air pollutants, and how to avoid those effects.</p>
 
 {% endblock %}
